// Copyright (c) Intangible Realities Laboratory, University of Bristol. All rights reserved.
// Licensed under the GPL. See License.txt in the project root for license information.

syntax = "proto3";
import "google/protobuf/struct.proto";

package narupa.protocol.state;

service State {
    // Periodically received aggregated updates from last known state to latest
    // state of a shared key/value store.
    rpc SubscribeStateUpdates(SubscribeStateUpdatesRequest) returns (stream StateUpdate) {}

    // Attempt to make an update to the shared key/value store.
    rpc MakeStateUpdate(StateUpdate) returns (StateUpdateResponse) {}

    // Attempt to acquire, renew, or release exclusive control of keys in the
    // shared key/value store.
    rpc UpdateLocks(UpdateLocksRequest) returns (UpdateLocksResponse) {}
}

message SubscribeStateUpdatesRequest {
    // Interval (in seconds) between update sends.
    float update_interval = 1;
}

message StateUpdate {
    // Token for associating requests to their lock ownership.
    string access_token = 1;

    // Struct where each field is an updated state key and it's latest value,
    // where null is equivalent to a key removal.
    google.protobuf.Struct changed_keys = 2;
}

message UpdateLocksRequest {
    // Token for associating requests to their lock ownership.
    string access_token = 1;

    // Struct where each field an state key and a request to acquire, renew, or
    // release an exclusive lock on it.
    google.protobuf.Struct lock_keys = 2;
}

message StateUpdateResponse {
    // Whether the update was successful.
    bool success = 1;
}

message UpdateLocksResponse {
    // Whether the locking was successful.
    bool success = 1;
}
